--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -1,157 +1,18 @@
-@import url("./content-grid.css");
-
-
-:root {
-    --background: #000;
-    --foreground: #fff;
-    --layer: 255 255 255;
-    --layer-1: rgb(var(--layer)/ .05);
-    --layer-2: rgb(var(--layer)/ .07);
-    --green: #00d68a;
-    --green-alt: #61d723;
-    --blue: #089cf2;
-    --yellow: #f3f318;
-    --gradient: radial-gradient(circle at top left, var(--green) 35%, var(--blue) 50%, var(--yellow) 60%, var(--green-alt) 80%);
-}
-
-html {
-    font-family: 'Inter', sans-serif;
-    background: var(--background);
-    color: var(--foreground);
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-h1 {
-    height: 100%;
-    display: inline-flex;
-    flex-wrap: wrap;
-    column-gap: 1rem;
+body {
+    display: flex;
+    align-items: center;
     justify-content: center;
-    text-align: center;
-    font-size: 5rem;
-    font-family: 'Playfair Display', serif;
-    font-weight: 700;
-    background: var(--gradient);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    min-height: 100vh;
+    background: #f1f4fd;
 }
 
-
-a {
-    font-size: 1.5rem;
-    font-weight: 200;
-    color: var(--foreground);
-    text-decoration: none;
-
-    :visited {
-        color: var(--foreground);
-    }
-}
-
-
-header {
-    position: relative;
-    padding-block-start: 3rem;
-    padding-block-end: 10rem;
-    display: grid;
-    grid-template-rows: 2fr 1fr;
-    place-items: center;
-    margin: 0;
-}
-
-
-ul {
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
-}
-
-li {
-    transition-property: box-shadow, transform, border-color;
-    transition-duration: .15s;
-    transition-timing-function: ease-in-out;
-    display: grid;
-    place-items: center;
-    gap: 1rem;
-    padding: 1rem;
-    max-width: max-content;
-    background: var(--layer-1);
-    border-radius: 2px;
-    box-shadow: 0 0 5px rgb(0 0 0 / .6);
-    position: relative;
-    border: 1px solid;
-
-    &:nth-child(3n+3) {
-        border-color: rgb(from var(--yellow) r g b / .2);
-
-        &:hover, &:focus-within {
-            border-color: rgb(from var(--yellow) r g b / .5);
-        }
-
-        &:focus-within {
-            outline: 2px solid var(--yellow);
-        }
-    }
-
-    &:nth-child(3n+2) {
-        border-color: rgb(from var(--blue) r g b / .2);
-
-        &:hover, &:focus-within {
-            border-color: rgb(from var(--blue) r g b / .5);
-        }
-
-        &:focus-within {
-            outline: 2px solid var(--blue);
-        }
-    }
-
-    &:nth-child(3n+1) {
-        border-color: rgb(from var(--green) r g b / .2);
-
-        &:hover, &:focus-within {
-            border-color: rgb(from var(--green) r g b / .5);
-        }
-
-        &:focus-within {
-            outline: 2px solid var(--green);
-        }
-    }
-
-    &:hover, &:focus-within {
-        transform: translateY(-2px);
-        box-shadow: 0 0 15px rgb(0 0 0 / .4);
-    }
-}
-
-
-li img {
-    aspect-ratio: 1;
-    max-width: 100%;
-    overflow: hidden;
-    border-radius: 50%;
-}
-
-li a {
-    &:focus {
-        outline: none;
-    }
-    &::before {
-        content: '';
-        position: absolute;
-        inset: 0;
-    }
-}
-
-
-footer {
-    display: inline-flex;
-    justify-content: space-evenly;
-    width: 100%;
-    padding: 2rem;
-    color: darkgray;
+.container {
+    max-width: 1200px;
+    width: 95%;
 }
