--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -2,150 +2,86 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-  }
-  
-  body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
-    background-color: white;
   }
   
-  a {
-    text-decoration: none;
-  }
-  
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  .container {
+body {
+    min-height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
-    height: 100vh;
-  }
-  
-  .card__container {
-    padding-block: 5rem;
-  }
-  
-  .card__content {
-    margin-inline: 1.75rem;
-    border-radius: 1.25rem;
-    overflow: hidden;
-  }
-  
-  .card__article {
-    width: 300px;
-    border-radius: 1.25rem;
-    overflow: hidden;
-  }
-  
-  .card__image {
-    position: relative;
-    background-color: pink;
-    padding-top: 1.5rem;
-    margin-bottom: -.75rem;
-  }
-  
-  .card__data {
-    background-color: black;
-    padding: 1.5rem 2rem;
-    border-radius: 1rem;
-    text-align: center;
-    position: relative;
-    z-index: 10;
-  }
-  
-  .card__img {
-    width: 180px;
-    margin: 0 auto;
-    position: relative;
-    z-index: 5;
-  }
-  
-  .card__shadow {
-    width: 200px;
-    height: 200px;
-    background-color: grey;
-    border-radius: 50%;
+    justify-content: center;
+    background-color: #efefef;
+}
+
+.slide-content{
+    margin: 0 40px;
+}
+
+.card{
+    border-radius: 25px;
+    background-color: #fff;
+}
+
+.card-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 14px;
+}
+
+.image-content{
+    row-gap: 5px;
+}
+
+.overlay{
     position: absolute;
-    top: 3.75rem;
     left: 0;
-    right: 0;
-    margin-inline: auto;
-    filter: blur(45px);
-  }
-  
-  .card__name {
-    font-size: 20px;
-    color: black;
-    margin-bottom: .75rem;
-  }
-  
-  .card__description {
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: #575366;
+}
+
+.card-image{
+    position: relative;
+    height: 150px;
+    width: 150px;
+    border-radius: 50%;
+}
+
+.card-image .card-img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.name{
+    font-size: 18px;
     font-weight: 500;
-    margin-bottom: 1.75rem;
-  }
+    color: #333;
+}
+
+.description{
+    font-size: 14px;
+    color: #707070;
+    text-align: center;
+}
+
+.button {
+    border: none;
+    font-size: 16px;
+    color: #FFF;
+    padding: 8px 16px;
+    background-color: #DADFF7;
+    border-radius: 6px;
+    margin: 14px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
+
+.button:hover{
+    background: #B5B2C2;
+}
+
   
-  .card__button {
-    display: inline-block;
-    background-color: palegoldenrod;
-    padding: .75rem 1.5rem;
-    border-radius: .25rem;
-    font-weight: 600;
-  }
-
-  /* Swiper class */
-.swiper-button-prev:after,
-.swiper-button-next:after {
-  content: "";
-}
-
-.swiper-button-prev,
-.swiper-button-next {
-  width: initial;
-  height: initial;
-  font-size: 3rem;
-  color: var(--second-color);
-  display: none;
-}
-
-.swiper-button-prev {
-  left: 0;
-}
-
-.swiper-button-next {
-  right: 0;
-}
-
-.swiper-pagination-bullet {
-  background-color: hsl(212, 32%, 40%);
-  opacity: 1;
-}
-
-.swiper-pagination-bullet-active {
-  background-color: var(--second-color);
-}
-
-/*=============== BREAKPOINTS ===============*/
-/* For small devices */
-@media screen and (max-width: 320px) {
-  .card__data {
-    padding: 1rem;
-  }
-}
-
-/* For medium devices */
-@media screen and (min-width: 768px) {
-  .card__content {
-    margin-inline: 3rem;
-  }
-
-  .swiper-button-next,
-  .swiper-button-prev {
-    display: block;
-  }
-}
