--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -22,8 +22,7 @@ body {
     background-color: #fff;
 }
 
-.image-content,
-.card-content{
+.image-content, .card-content{
     display: flex;
     flex-direction: column;
     align-items: center;
