--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -30,7 +30,8 @@ body {
     background-color: #fff;
 }
 
-.image-content .card-content{
+.image-content,
+.card-content{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,6 +41,7 @@ body {
 .image-content{
     position: relative;
     row-gap: 5px;
+    padding: 25px 0;
 }
 
 .overlay{
@@ -50,6 +52,22 @@ body {
     width: 100%;
     background-color: #E2FDFF;
     border-radius: 25px 25px 0 25px;
+}
+
+.overlay::before,
+.overlay::after{
+    content: '';
+    position: absolute;
+    right: 0;
+    bottom: -40px;
+    height: 40px;
+    width: 40px;
+    background-color: #E2FDFF;
+}
+
+.overlay::after{
+    border-radius: 0 25px 0 0;
+    background-color: #FFF;
 }
 
 .card-image{
