--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -16,7 +16,7 @@ body {
 .slide-container{
     max-width: 1120px;
     width: 100%;
-    background-color: grey;
+    background-color: #E1DEE9;
     padding: 40px 0;
 }
 
@@ -50,7 +50,7 @@ body {
     top: 0;
     height: 100%;
     width: 100%;
-    background-color: #E2FDFF;
+    background-color: #D5CFE1;
     border-radius: 25px 25px 0 25px;
 }
 
@@ -62,7 +62,7 @@ body {
     bottom: -40px;
     height: 40px;
     width: 40px;
-    background-color: #E2FDFF;
+    background-color: #D5CFE1;
 }
 
 .overlay::after{
@@ -84,7 +84,7 @@ body {
     width: 100%;
     object-fit: cover;
     border-radius: 50%;
-    border: 4px solid #BFD7FF;
+    border: 4px solid #B6A6CA;
 }
 
 .name{
@@ -104,7 +104,7 @@ body {
     font-size: 16px;
     color: #FFF;
     padding: 8px 16px;
-    background-color: #9BB1FF;
+    background-color: #D4BEBE;
     border-radius: 6px;
     margin: 14px;
     cursor: pointer;
@@ -112,7 +112,7 @@ body {
 }
 
 .button:hover{
-    background: #B5BFFF;
+    background: #A09ABC;
 }
 
   
