--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -24,6 +24,12 @@ body {
     margin: 0 40px;
 }
 
+.card-wrapper{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .card{
     width: 320px;
     border-radius: 25px;
@@ -99,7 +105,55 @@ body {
     text-align: center;
 }
 
-.button {
+*, *::after, *::before {
+    box-sizing: border-box;
+  }
+  
+  .modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    transition: 200ms ease-in-out;
+    border: 1px solid black;
+    border-radius: 10px;
+    z-index: 10;
+    background-color: white;
+    width: 500px;
+    max-width: 80%;
+  }
+  
+  .modal.active {
+    transform: translate(-50%, -50%) scale(1);
+  }
+  
+  .modal-header {
+    padding: 10px 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid black;
+  }
+  
+  .modal-header .title {
+    font-size: 1.25rem;
+    font-weight: bold;
+  }
+  
+  .modal-header .close-button {
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 1.25rem;
+    font-weight: bold;
+  }
+  
+  .modal-body {
+    padding: 10px 15px;
+  }
+
+  /* .button {
     border: none;
     font-size: 16px;
     color: #FFF;
@@ -114,5 +168,3 @@ body {
 .button:hover{
     background: #A09ABC;
 }
-
-  
