--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -13,158 +13,56 @@ body {
     background-color: #efefef;
 }
 
-.slide-container{
-    max-width: 1120px;
+section {
+    position: relative;
     width: 100%;
-    background-color: #E1DEE9;
-    padding: 40px 0;
-}
-
-.slide-content{
-    margin: 0 40px;
-}
-
-.card-wrapper{
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.card{
-    width: 320px;
-    border-radius: 25px;
-    background-color: #fff;
-}
-
-.image-content,
-.card-content{
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 10px 14px;
+    justify-content: flex;
+    background: #fff;
 }
 
-.image-content{
+header {
     position: relative;
-    row-gap: 5px;
-    padding: 25px 0;
-}
-
-.overlay{
-    position: absolute;
-    left: 0;
     top: 0;
-    height: 100%;
     width: 100%;
-    background-color: #D5CFE1;
-    border-radius: 25px 25px 0 25px;
-}
-
-.overlay::before,
-.overlay::after{
-    content: '';
-    position: absolute;
-    right: 0;
-    bottom: -40px;
-    height: 40px;
-    width: 40px;
-    background-color: #D5CFE1;
-}
-
-.overlay::after{
-    border-radius: 0 25px 0 0;
-    background-color: #FFF;
-}
-
-.card-image{
-    position: relative;
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
-    background: #FFF;
-    padding: 3px;
-}
-
-.card-image .card-img{
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-    border: 4px solid #B6A6CA;
-}
-
-.name{
-    font-size: 18px;
-    font-weight: 500;
-    color: #333;
-}
-
-.description{
-    font-size: 14px;
-    color: #707070;
-    text-align: center;
-}
-
-*, *::after, *::before {
-    box-sizing: border-box;
-  }
-  
-  .modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(0);
-    transition: 200ms ease-in-out;
-    border: 1px solid black;
-    border-radius: 10px;
-    z-index: 10;
-    background-color: white;
-    width: 500px;
-    max-width: 80%;
-  }
-  
-  .modal.active {
-    transform: translate(-50%, -50%) scale(1);
-  }
-  
-  .modal-header {
-    padding: 10px 15px;
+    padding: 30px 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid black;
-  }
-  
-  .modal-header .title {
-    font-size: 1.25rem;
-    font-weight: bold;
-  }
-  
-  .modal-header .close-button {
-    cursor: pointer;
-    border: none;
-    outline: none;
-    background: none;
-    font-size: 1.25rem;
-    font-weight: bold;
-  }
-  
-  .modal-body {
-    padding: 10px 15px;
-  }
-
-  /* .button {
-    border: none;
-    font-size: 16px;
-    color: #FFF;
-    padding: 8px 16px;
-    background-color: #D4BEBE;
-    border-radius: 6px;
-    margin: 14px;
-    cursor: pointer;
-    transition: all 0.3s ease;
 }
 
-.button:hover{
-    background: #A09ABC;
+.logo {
+    position: relative;
+    color: #000;
+    font-size: 30px;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 1px;
 }
+
+header .navigation a{
+    color: #000;
+    background: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    letter-spacing: 1px;
+    padding: 2px 15px;
+    border-radius: 20px;
+}
+
+header .navigation a:not(:last-child):{
+    margin-right: 30px;
+}
+
+header .navigation a:hover{
+    background: #fff;
+}
+
+.content{
+    max-width: 650px;
+    margin: 60px 100px;
+}
+
