--- a/docs/styles/index.css
+++ b/docs/styles/index.css
@@ -1,29 +1,26 @@
-* {
-    box-sizing: border-box;
-    padding: 0;
+:root {
+    --yellow: #f6e767;
+    --white: #f6f7f8;
+    --black: #2c2e31;
+  }
+
+*{
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
   }
   
-body {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #efefef;
-}
-
-section {
+  section{
     position: relative;
     width: 100%;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex;
-    background: #fff;
-}
-
-header {
+    justify-content: flex-start;
+  }
+  
+  header{
     position: relative;
     top: 0;
     width: 100%;
@@ -31,38 +28,124 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-.logo {
+  }
+  
+  header .logo{
     position: relative;
-    color: #000;
+    color: var(--black);
     font-size: 30px;
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 800;
     letter-spacing: 1px;
-}
-
-header .navigation a{
-    color: #000;
-    background: #fff;
-    text-decoration: none;
-    font-weight: 500;
-    letter-spacing: 1px;
-    padding: 2px 15px;
-    border-radius: 20px;
-}
-
-header .navigation a:not(:last-child):{
-    margin-right: 30px;
-}
-
-header .navigation a:hover{
-    background: #fff;
-}
-
-.content{
+  }
+  
+  .content{
     max-width: 650px;
     margin: 60px 100px;
-}
+  }
+  
+  .content h2{
+    color: #ffdb9d;
+    font-size: 55px;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 2px;
+    line-height: 60px;
+    margin-bottom: 30px;
+  }
+  
+  .content .about p{
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 40px;
+  }
 
+  .stats label {
+    font-weight: 600;
+  }
+  
+  .stats meter {
+    width: 100%;
+    height: 2rem;
+  }
+  
+  #button {
+    background: var(--yellow);
+    color: var(--black);
+    padding: 1rem 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    border: none;
+    border-radius: 4px;
+    transition: 0.1s ease transform;
+    cursor: pointer;
+  }
+  
+  #button:active {
+    transform: translatey(3px);
+  }
+  
+  #punchline {
+    font-weight: 600;
+    font-size: 1.5rem;
+  }
+  
+  #error {
+    color: #ff4d51;
+  }
+  
+  .pokemon {
+    height: 180px;
+    width: 200px;
+  }
+  
+  .pokemonName {
+    font-weight: 500;
+    font-size: 1.5rem;
+    text-transform: uppercase;
+  }  
+
+  /* Responsive styles */
+  
+  @media (max-width: 960px){
+    header .navigation{
+      display: flex;
+      align-items: center;
+    }
+  
+    header .logo{
+      position: absolute;
+      bottom: -6px;
+    }
+  
+    .content .info h2{
+      font-size: 45px;
+      line-height: 50px;
+    }
+  
+    .content .info h2 span{
+      font-size: 40px;
+      font-weight: 600;
+    }
+  
+    .content .info p{
+      font-size: 14px;
+    }
+  }
+  
+  @media (max-width: 560px){
+    .content .info h2{
+      font-size: 35px;
+      line-height: 40px;
+    }
+  
+    .content .info h2 span{
+      font-size: 30px;
+      font-weight: 600;
+    }
+  
+    .content .info p{
+      font-size: 14px;
+    }
+  }
